objects/Enterprise_Apps_NPS_Score__c.object
<CustomObject>
    <fields>
        <fullName>Challenges_in_the_Work_Environment_Score__c</fullName>
        <label>Challenges in the Work Environment Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Tools_and_or_Deploy_Score__c</fullName>
        <label>Development Tools and/or Deploy Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_assignment_and_or_Structure_Score__c</fullName>
        <label>Domain assignment and/or Structure Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Detractors__c</fullName>
        <label>Number of Detractors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Passives__c</fullName>
        <label>Number of Passives</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Promoters__c</fullName>
        <label>Number of Promoters</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarding_and_Continual_Training_Score__c</fullName>
        <label>Onboarding and Continual Training Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_for_Advancement_Score__c</fullName>
        <label>Opportunity for Advancement Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <label>Overall Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Culture_and_or_Communication_Score__c</fullName>
        <label>Team Culture and/or Communication Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Management_Score__c</fullName>
        <label>Team Management Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Responses__c</fullName>
        <label>Total Number of Responses</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Enterprise Apps NPS Score</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Enterprise Apps NPS Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enterprise Apps NPS Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>